--- a/src/CZWA.Web/project.json
+++ b/src/CZWA.Web/project.json
@@ -26,11 +26,11 @@
     "CZWA.Authorization": "1.0.0-*",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.1.0",
     "CZWA.Services": "1.0.0-*",
-    "CZWA.ViewModels": "1.0.0-*",
     "CZWA.Entitys": "1.0.0-*",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
     "CZWA.DB": "1.0.0-*",
-    "CZWA.Websockets": "1.0.0-*"
+    "CZWA.Websockets": "1.0.0-*",
+    "CZWA.ViewModels": "1.0.0-*"
   },
 
   "tools": {
