--- a/src/CZWA.Web/project.json
+++ b/src/CZWA.Web/project.json
@@ -49,7 +49,8 @@
 
   "buildOptions": {
     "emitEntryPoint": true,
-    "preserveCompilationContext": true
+    "preserveCompilationContext": true,
+    "embed": "Views/Components/**/*.cshtml"
   },
 
   "runtimeOptions": {
