--- a/src/CZWA.DB/project.json
+++ b/src/CZWA.DB/project.json
@@ -6,15 +6,35 @@
     "CZWA.Entitys": "1.0.0-*",
     "Microsoft.AspNetCore.Http.Abstractions": "1.1.0",
     "Microsoft.EntityFrameworkCore": "1.1.0",
-    "NETStandard.Library": "1.6.1"
+    "Microsoft.NETCore.App": {
+      "type": "platform",
+      "version": "1.1.0"
+    },
+    "NETStandard.Library": "1.6.1",
+    "Microsoft.EntityFrameworkCore.Tools": {
+      "version": "1.1.0-preview4-final",
+      "type": "build"
+    }
   },
+
+  "tools": {
+    "Microsoft.EntityFrameworkCore.Tools": "1.1.0-preview4-final",
+    "Microsoft.EntityFrameworkCore.Tools.DotNet": "1.1.0-preview4-final"
+  },
+
+  //"frameworks": {
+  //  "netcoreapp1.0": {
+  //    "imports": [
+  //      "dotnet5.6",
+  //      "portable-net45+win8"
+  //    ]
+  //  }
+  //},
 
   "frameworks": {
     "netcoreapp1.0": {
-      "imports": [
-        "dotnet5.6",
-        "portable-net45+win8"
-      ]
+      "imports": "dnxcore50"
     }
   }
+
 }
