--- a/src/CZWA.Web/project.json
+++ b/src/CZWA.Web/project.json
@@ -31,7 +31,8 @@
     "CZWA.DB": "1.0.0-*",
     "CZWA.Websockets": "1.0.0",
     "CZWA.ViewModels": "1.0.0-*",
-    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0"
+    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0",
+    "CZWA.DB_Migration": "1.0.0-*"
   },
 
   "tools": {
