--- a/src/CZWA.Services/project.json
+++ b/src/CZWA.Services/project.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "CZWA.Common": "1.0.0-*",
     "CZWA.DB": "1.0.0-*",
+    "CZWA.DB_Migration": "1.0.0-*",
     "CZWA.Entitys": "1.0.0-*",
     "CZWA.ViewModels": "1.0.0-*",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.1.0",
