--- a/src/CZWA.Common/project.json
+++ b/src/CZWA.Common/project.json
@@ -3,7 +3,8 @@
 
   "dependencies": {
     "NETStandard.Library": "1.6.1",
-    "Newtonsoft.Json": "9.0.1"
+    "Newtonsoft.Json": "9.0.1",
+    "Microsoft.AspNetCore.WebSockets": "1.0.0",
   },
 
   "frameworks": {
